Fix testimonials on Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ code {
 
 .testimonial_content div {
 	margin-left: 2%;
+  width: 100%;
 }
 
 .tutorial_image {
